fix(consonant-blocks): correct/normalize spacing issues

--- a/templates/consonant/blocks/cards/cards.css
+++ b/templates/consonant/blocks/cards/cards.css
@@ -8,7 +8,8 @@ main .cards {
     display: flex;
     justify-content: center;
     align-items: stretch;
-    margin: var(--section-spacing) 0;
+    margin: 0;
+    margin-top: var(--section-spacing);
     flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
@@ -22,7 +23,7 @@ main .cards-container h3 + .cards,
 main .cards-container h4 + .cards, 
 main .cards-container h5 + .cards,
 main .cards-container h6 + .cards {
-    margin-top: 40px;
+    margin-top: var(--section-spacing-small);
 }
 
 main .cards.col-2-cards,
