--- a/templates/consonant/blocks/section-metadata/section-metadata.css
+++ b/templates/consonant/blocks/section-metadata/section-metadata.css
@@ -5,6 +5,7 @@ main .section-metadata {
 main .background-container {
     padding-top: var(--section-spacing);
     padding-bottom: var(--section-spacing);
+    margin-top: var(--section-spacing);
 }
 
 main .background-container + .background-container {
